# grpc-rust

./: Cargo.toml  build.rs
proto/: fullservice.proto
src/: client.rs  server.rs
