[package]
name = "grpc"
version = "0.1.0"
edition = "2021"

[[bin]] 
name = "fullservice-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "fullservice-client"
path = "src/client.rs"

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[build-dependencies]
tonic-build = "0.11"
